fix css in Collapse

--- a/src/css/collapse/collapse.css
+++ b/src/css/collapse/collapse.css
@@ -1,8 +1,11 @@
 .left-nav-collapse {
     border-bottom: solid thin #DFDFDF;
-    width: 180px;
-    padding: 20px 20px;
-    text-align: left;
+    width: 200px;
+    padding: 20px 10px 20px 0px;
+    text-align: start;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 14px;
 }
 
 .left-nav-collapse-result {
